# data-driven-template

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/code/: mdd_template_factory.rst.txt  modules.rst.txt
code/: mdd_template_factory.html  modules.html  setup.html
concept/: template-data-model.html
ddt-tree-view/: CHANGELOG.md  README.md  package-lock.json  package.json
ddt-tree-view/src/: ddt.ts  ddtview.ts  extension.ts  testview.ts
ddtf/: __init__.py  fragments.py  md.py  sources.py
docs/mdd-model/: .project  mdd.afm  mdd.aird  mdd.capella
docs/source/: conf.py
docs/source/_ext/: jinja_in_rst.py
docs/source/concept/: template-data-model.rst
examples/: processes.yml  report.d2.yml  sandbox.ipynb
tests/: test_ddtf.py
