[tool.poetry]
name = "ddtf"
version = "0.1.0"
description = ""
authors = ["vik378 <electron378@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-material = "^0.0.35"
capellambse = "^0.4.15"
ipykernel = "^6.15.1"
types-PyYAML = "^6.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
