# Copyright 2022 Viktor Kravchenko
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = mdd_template_factory
url = https://github.com/vik378/mdd_template_factory
author = Viktor Kravchenko
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
license = Apache
description = Provides a web-app for templating model-derived documents
long_description = file: README.md
long_description_content_type = text/markdown
keywords = arcadia, capella, mbse, model-based systems engineering, model-derived documents
platforms = any

[options]
python_requires = >=3.8
use_2to3 = false
packages = find:

[build-system]
requires = ["setuptools", "wheel"]

[options.extras_require]
docs =
    jinja2
    sphinx
    sphinx-rtd-theme
    capellambse
    sphinx-material


[build_sphinx]
source-dir = docs/source
build-dir = public
